--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
-*.rds filter=lfs diff=lfs merge=lfs -text
+*.shp filter=lfs diff=lfs merge=lfs -text
 *.rds filter=lfs diff=lfs merge=lfs -text
 
